--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
 			integrity="sha512-784FtIkKrm/QsfPOTifpdvdvzE0y3/c4OSZhu91VxdGMuW7/y7gr8TiYFjuebfK9qE8HgYxFVhMR3nUu+LFbjg=="
 			crossorigin="anonymous"></script>
 
-		<title>Teach Vue Chat Client</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+        <title>Teach Vue Chat Client</title>
 	</head>
 	<body>
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
-	</body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    </body>
 </html>
